--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-body{
+/* body{
 
     background-image: url("background-removed-Caesar-Cipher.png");
     background-color: #B7C5E1;
     background-repeat: no-repeat;
     background-position: center 4px;
-}
+} */
 
 #innerCirc {
     -webkit-animation: spin 1s linear; 
@@ -17,4 +17,3 @@ body{
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); 
     }
-      
